# BeanThere-POS

./: package-lock.json  package.json
backend/: pyproject.toml
backend/src/: db.py  models.py  schema.py
backend/src/api/: categories.py  menu_items.py
backend/src/crud/: categories.py  menu_items.py
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
frontend/src/lib/components/: app-sidebar.svelte
frontend/src/routes/: +layout.svelte
